Update css for correct spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,16 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
+.container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .jumbotron {
   background-color: #343a40;
   color: white;
   padding: 20px;
+  border-radius: 0%;
 }
 
 .main-menu a {
@@ -34,6 +40,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .weather-card {
